fix Link overflow

--- a/src/components/LinkPreview/LinkPreview.module.css
+++ b/src/components/LinkPreview/LinkPreview.module.css
@@ -16,7 +16,9 @@
   text-decoration: none;
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width: 75%;
+  white-space: nowrap;
+  overflow-wrap: anywhere;
+  max-width: 20rem;
 }
 
 .link:hover {
